# mestrado-bustamante

./: .gitignore  CMakeLists.txt  ProjectHome.md
busta_libs/: CMakeLists.txt
busta_libs/common_structures/: CMakeLists.txt  matrix4x4.cpp  matrix4x4.h  vector4.cpp  vector4.h
busta_libs/glwidget/: CMakeLists.txt  glwidget.cpp  glwidget.h  glwidgetscene.cpp  glwidgetscene.h
busta_libs/obj_loader/: CMakeLists.txt  wavefront_obj_loader.cpp  wavefront_obj_loader.h
busta_libs/opencl_manager/: CMakeLists.txt  openclmanager.cpp  openclmanager.h  openclmanagerdefines.h
busta_libs/opengl/: CMakeLists.txt  opengl.cpp
busta_libs/opengl_extension_manager/: CMakeLists.txt  openglextensionmanager.cpp  openglextensionmanager.h  openglextensionshortcut.cpp  openglextensionshortcut.h  openglextensiontypedef.h
programs/: CMakeLists.txt
programs/CG1/: CMakeLists.txt  cgapplication.cpp  cgapplication.h  main.cpp
programs/CG1/animation/: animation_spin.cpp  animation_spin.h  animationshake.cpp  animationshake.h
programs/CG1/opengl/: animation.cpp  animation.h  material.cpp  material.h  model.cpp  model.h  object.cpp  object.h  opengl.cpp  opengl.h  particle.cpp  particle.h  particle_behavior.cpp  particle_behavior.h  particle_system.cpp  particle_system.h  scene.cpp  scene.h  shaders.cpp  shaders.h  textures.cpp  textures.h
programs/CG1/particle_behavior/: particlefire.cpp  particlefire.h
programs/CG1/resources/: bonfire.blend  campfire.blend  campfire.blend1  campfire.mtl  cube.mtl  donut.blend  donut.mtl  fur.blend  fur.mtl  multicube.blend  multicube.mtl  pickup.blend  pickup.mtl  pie_table.blend  pie_table.blend1  pie_table.mtl  resources.qrc  skybox.blend  skybox.blend1  skydome.blend  skydome.blend1  skydome.mtl  tire.blend  tire.blend1  tire.mtl
programs/CG1/scene/: scene_bezier.cpp  scene_bezier.h  scene_bonfire.cpp  scene_bonfire.h  scene_donut.cpp  scene_donut.h  scene_fur.cpp  scene_fur.h  scene_multicubes.cpp  scene_multicubes.h  scene_obj.cpp  scene_obj.h  scene_pie.cpp  scene_pie.h  scene_tire.cpp  scene_tire.h  scene_truck.cpp  scene_truck.h  scene_voxel.cpp  scene_voxel.h
programs/CG1/shaders/: phong.fsh  phong.vsh  phong_shader.h  shaders.qrc  simple_texture.fsh  simple_texture.vsh  toon.fsh  toon.vsh  toon_shader.h
programs/CG1/utils/: common.cpp  common.h  options.cpp  options.h  random.cpp  random.h
programs/CG1/widgets/: add_matrix_dialog.cpp  add_matrix_dialog.h  add_matrix_dialog.ui  bezier_widget.ui  fur_widget.ui  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  obj_widget.ui  particles_widget.ui  showmatrixdialog.cpp  showmatrixdialog.h  showmatrixdialog.ui  truck_widget.ui  voxel_widget.ui
programs/CG2/: CG2.pro  CMakeLists.txt  application.cpp  application.h  constants.h  main.cpp  openclloader.cpp  openclloader.h  openclloaderdefines.h  openclraytracing.cpp  openclraytracing.h  ray.cpp  ray.h  resources.qrc  structures.cpp  structures.h
programs/CG2/models/: car.mtl  crystal_formations.mtl  cubes.mtl  enviro_ball.mtl  enviro_monkey.mtl  environment.mtl  one_crystal.mtl  plane.mtl  pyramid.mtl  spheres.mtl  textured.mtl  tr_and_ref.mtl
programs/CG2/scene/: objloader.cpp  objloader.h  openglauxfunctions.cpp  openglauxfunctions.h  scene.cpp  scene.h  scenelight.cpp  scenelight.h  sceneobject.cpp  sceneobject.h  triangleface.cpp  triangleface.h
programs/CG2/structures/: color.cpp  color.h  material.cpp  material.h  matrix4x4.cpp  matrix4x4.h  texturecontainer.cpp  texturecontainer.h  vector.cpp  vector.h
programs/CG2/widgets/: glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  outerviewwidget.cpp  outerviewwidget.h  raytracingresultviewerwidget.cpp  raytracingresultviewerwidget.h  raytracingresultviewerwidget.ui  raytracingthread.cpp  raytracingthread.h  raytracingwidget.cpp  raytracingwidget.h
programs/ExampleCG1/: ExampleCG1.pro  glvertex.cpp  glvertex.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.ui  matrix4x4.cpp  matrix4x4.h  vector4.cpp  vector4.h
programs/GC/: CMakeLists.txt  HULL2D.txt  HULL3D.txt  INPUT2D.txt  INPUT3D.txt  INPUT_RICARDO.txt  TETRA2D.txt  TETRA3D.txt  crystal_formations.obj.out.txt  main.cpp  ric.cpp  ric.h  sphere.obj.out.txt
programs/GC/algorithm/: qh_face.cpp  qh_face.h  qh_quickhull.cpp  qh_quickhull.h
programs/GC/interface/: application.cpp  application.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  objectcontrolwidget.cpp  objectcontrolwidget.h  objectcontrolwidget.ui
programs/GC/rendering/: deltetra.cpp  deltetra.h  geometry.cpp  geometry.h  qhpoly.cpp  qhpoly.h  scene.cpp  scene.h  scenechquickhull.cpp  scenechquickhull.h  sceneconvexhull.cpp  sceneconvexhull.h  sceneobject.cpp  sceneobject.h  scenepointcloud.cpp  scenepointcloud.h  scenetetradelaunay.cpp  scenetetradelaunay.h  scenetetrahedrons.cpp  scenetetrahedrons.h  scenetext.cpp  scenetext.h
programs/MonitoriaCG1/: MonitoriaCG1.pro  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h
programs/SciVis/: CMakeLists.txt  loadingprogress.cpp  loadingprogress.h  loadingprogress.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scivis.cpp  scivis.h
programs/SciVis/algorithm/: marchingcubes.cpp  marchingcubes.h  marchingcubeskernel.h  marchingcubestables.h  transferfunction.cpp  transferfunction.h
programs/SciVis/data/: volumedata.cpp  volumedata.h
programs/SciVis/scene/: marchingcubesscene.cpp  marchingcubesscene.h  volumeplanesscene.cpp  volumeplanesscene.h
programs/SciVisDataGenerator/: main.cpp
programs/SpaceView/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  object.cpp  object.h  scene.cpp  scene.h  slidepage.cpp  slidepage.h  space3d.cpp  space3d.h
programs/SpaceView/opengl/: model.h  (+7 more)
prototypes/arbitrary_angle_view/: CMakeLists.txt  aavmainwindow.cpp  aavmainwindow.h  aavmainwindow.ui  arbitrary_angle_view.pro  glwidget.cpp  glwidget.h  main.cpp  mainwindow.ui
prototypes/qt_opengl_bullet/: CMakeLists.txt  CMakeLists2.txt  main.cpp  mainwindow.cpp
(+81 files in other folders)
