add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/common_structures")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/obj_loader")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/glwidget")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/opengl_extension_manager")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/opencl_manager")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/opengl_manager")
