add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/CG1")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/CG2")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/SciVis")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/SpaceView")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/GC")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/SciVisDataGenerator")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/ExampleCG1")
